--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/mala23/how-to-socket/issues"
   },
-  "homepage": "https://github.com/mala23/how-to-socket"
+  "homepage": "https://github.com/mala23/how-to-socket",
+  "dependencies": {
+    "express": "^4.10.0",
+    "jade": "^1.7.0",
+    "socket.io": "^1.2.0"
+  }
 }
