--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^4.10.0",
     "jade": "^1.7.0",
     "socket.io": "^1.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.2.1"
   }
 }
